5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4355/executions/1721_3064.log
== TEST (2019-05-02 19:12:25) 
-- CODE:
-o-o-o-o-o-o-o-o-o-o-o-o-o-
-- ERROR:
File "XXXX", line 1
    -o-o-o-o-o-o-o-o-o-o-o-o-o-
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:12:28) 
-- CODE:
-o-o-o-o-o-o-o-o-o-o-o-o-o-
-- EXECUTION TIME:
0.220792
-- ERROR:
  File "/home/codebench/codes/1721/3064/main.py", line 1
    -o-o-o-o-o-o-o-o-o-o-o-o-o-
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 19:12:56) 
-- CODE:
rom math import*
-- ERROR:
File "XXXX", line 1
    rom math import*
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 19:12:57) 
-- CODE:
rom math import*
-- EXECUTION TIME:
0.17838
-- ERROR:
  File "/home/codebench/codes/1721/3064/main.py", line 1
    rom math import*
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
